[package]
name = "find_class"
version = "0.1.0"
authors = ["marian <mnedelescu_ca@yahoo.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
itertools = "0.10.3"
clap = { version = "3.1.5", features = ["derive"] }
